Revision history for Business::Shipping
=======================================

2.02  Oct 7 2005


  UPS_Offline
  
    * [Fixed] Fuel surcharge update script mis-records dates.
    
    * Increase the number-of-packages limit, which increases the maximum weight.
    
    * Could not find data error now reports current working directory to help
      find the problem.


2.01  Sep 16 2005


  UPS_Offline
  
    * [Fixed] Many originating zip codes broken
      - Buggy "find nearby zone files" code.

    * Fuel surcharge enhancements
      - Major rewrite of update script.
      - Update script now stores effective date.
      - Calculation now occurs only once at load time.
      - Automatically use the "effective" rate if applicable. 
      - New code is backwards-compatible with old rate files, and new rate files
        are backwards-compatible with old code.

  Misc
  
    * Minor POD fix.  Found by CPAN Tester Josts Smokehouse 
      <Jost.Krieger+smokeback[at]ruhr-uni-bochum.de>.  


2.00  Aug 14 2005


  General
  
    * Remove get_grouped_attrs() debug print.
    
    * Remove old tests.
    
    * Remove dependancy on Scalar::Util

  UPS_Offline
  
    * Fix Delivery Area Surcharge for zip codes over 46000.
      - Caused by truncated data table.
      
    * Use a binary search for the Delivery Area Surcharge for speed.

    * Fix Residential surcharge (differential).
      - Only apply to the correct services
      - Do not apply twice for Ground Residential.
      
    * Add a residential indicator to the automatic tests.
    
    * Fix incorrect usage of gndres/gndcomm for hundredweight.
    
    * Make residential differential configurable in config.ini
    
    * New method for determining if a shipment is via ground or air.
  

1.92  Aug 03 2005


  General
  
    * We need a little more testing before we bump the version to 2.0, 1.91 was
      not released.
      
    * Replace the ClassAttribs/ClassInfo system with a simpler one. 